# dapp-battleships

./: README.md
contract/: .gitignore  Cargo.toml  Makefile
contract/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  utilities.rs  validation.rs
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: App.tsx  CreateGame.tsx  GameGridPreview.tsx  Login.tsx  ViewGame.tsx
frontend/src/contexts/: ClientContext.tsx
frontend/src/utils/: BattleshipClient.ts  Client.ts  battleship-types.ts
uploader/: package.json  tsconfig.json
uploader/src/: index.ts  instantiate.ts  instantiate_only.ts  upload.ts
