[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
schemars = "0.8.22"
serde = { version = "1.0", default-features = false, features = ["derive"] }
secret-toolkit = "0.10.3"
thiserror = "1.0.69"

[features]
default = []